LIMIT query.
- fixed bug in circular dependency sorting at flush time; if object A
contained a cyclical many-to-one relationship to object B, and object B 
was just attached to object A, *but* object B itself wasnt changed,
the many-to-one synchronize of B's primary key attribute to A's foreign key
attribute wouldnt occur.  [ticket:360]

0.3.0
- General:
    - logging is now implemented via standard python "logging" module.
    "echo" keyword parameters are still functional but set/unset
    log levels for their respective classes/instances.  all logging
    can be controlled directly through the Python API by setting
    INFO and DEBUG levels for loggers in the "sqlalchemy" namespace.
    class-level logging is under "sqlalchemy.<module>.<classname>",
    instance-level logging under "sqlalchemy.<module>.<classname>.0x..<00-FF>".
    Test suite includes "--log-info" and "--log-debug" arguments
    which work independently of --verbose/--quiet.  Logging added
    to orm to allow tracking of mapper configurations, row iteration.
    - the documentation-generation system has been overhauled to be
    much simpler in design and more integrated with Markdown
- Specific Databases:
    - SQLite:
    - sqlite boolean datatype converts False/True to 0/1 by default
    - fixes to Date/Time (SLDate/SLTime) types; works as good as postgres 
    now [ticket:335]
    - MS-SQL: 
    - fixes bug 261 (table reflection broken for MS-SQL case-sensitive 
    databases)
    - can now specify port for pymssql
    - introduces new "auto_identity_insert" option for auto-switching 
    between "SET IDENTITY_INSERT" mode when values specified for IDENTITY columns 
    - now supports multi-column foreign keys
    - fix to reflecting date/datetime columns
    - NCHAR and NVARCHAR type support added
    - Oracle:
    - Oracle has experimental support for cx_Oracle.TIMESTAMP, which requires
    a setinputsizes() call on the cursor that is now enabled via the